--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="card bg-light">
                         <div class="card-body text-center">
-                            <img src="https:/randomuser.me/api/portraits/men/11.jpg" alt="" class="rounded-circle mb-3">
+                            <img src="./img/44.jpg" alt="" class="rounded-circle mb-3">
                             <h3 class="card-title mb-3">John Doe</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium dignissimos repellat nam accusamus enim voluptas?</p>    
                             <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
@@ -311,7 +311,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="card bg-light">
                         <div class="card-body text-center">
-                            <img src="https:/randomuser.me/api/portraits/men/1.jpg" alt="" class="rounded-circle mb-3">
+                            <img src="./img/44.jpg" alt="" class="rounded-circle mb-3">
                             <h3 class="card-title mb-3">Smith Brian</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium dignissimos repellat nam accusamus enim voluptas?</p>    
                             <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
@@ -325,7 +325,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="card bg-light">
                         <div class="card-body text-center">
-                            <img src="https:/randomuser.me/api/portraits/men/19.jpg" alt="" class="rounded-circle mb-3">
+                            <img src="./img/44.jpg" alt="" class="rounded-circle mb-3">
                             <h3 class="card-title mb-3">Ronal Doe</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium dignissimos repellat nam accusamus enim voluptas?</p>    
                             <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
@@ -339,7 +339,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="card bg-light">
                         <div class="card-body text-center">
-                            <img src="https:/randomuser.me/api/portraits/women/11.jpg" alt="" class="rounded-circle mb-3">
+                            <img src="./img/44.jpg" alt="" class="rounded-circle mb-3">
                             <h3 class="card-title mb-3">Jenny Pepper</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium dignissimos repellat nam accusamus enim voluptas?</p>    
                             <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
